# Soroban-Cookbook-

./: .clippy.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS_SETUP.md  ERROR_HANDLING_QUICK_REFERENCE.md  README.md  TODO.md  book.toml  codecov.yml  tarpaulin.toml
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  example_request.md  feature_request.md
.github/workflows/: README.md  ci.yml  dependabot-auto-merge.yml  deploy-docs.yml  security-audit.yml  test.yml
.kiro/specs/temporary-storage-patterns/: .config.kiro  requirements.md
book/: MDBOOK_REFERENCE.md  README.md  book.toml
book/src/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SUMMARY.md
book/src/adr/: 001-record-architecture-decisions.md  README.md  template.md
book/src/docs/: README.md  best-practices.md  glossary.md  quick-reference.md  style-guide.md
book/src/examples/: advanced.md  ajo-factory.md  basics.md  defi.md  error-handling.md  events.md  governance.md  intermediate.md  nfts.md  storage-patterns.md  tokens.md
book/src/guides/: deployment.md  ethereum-to-soroban.md  getting-started.md  testing.md
docs/: README.md  benchmarks.md  best-practices.md  common-patterns.md  dependabot-setup.md  error-handling.md  glossary.md  quick-reference.md  storage-types.md  style-guide.md  troubleshooting.md  video-script-getting-started.md
docs/adr/: README.md
examples/: README.md
examples/advanced/: README.md
examples/advanced/01-multi-party-auth/: README.md
examples/advanced/02-timelock/: Cargo.toml  README.md
examples/basics/: README.md
examples/basics/01-hello-world/: Cargo.toml  README.md
examples/basics/02-storage-patterns/: Cargo.toml  README.md
examples/basics/03-authentication/: Cargo.toml  README.md
examples/basics/03-custom-errors/: Cargo.toml  README.md
examples/basics/04-events/: Cargo.toml  EVENT_QUICK_REFERENCE.md  README.md
examples/basics/05-auth-context/: README.md
examples/basics/05-error-handling/: Cargo.toml  README.md
examples/basics/06-soroban-types/: Cargo.toml  README.md
examples/basics/06-type-conversions/: Cargo.toml  README.md
examples/basics/06-validation-patterns/: Cargo.toml  README.md
examples/basics/07-enum-types/: Cargo.toml  README.md
examples/basics/08-custom-structs/: .gitignore  Cargo.toml  README.md
examples/basics/09-primitive-types/: Cargo.toml  README.md
examples/basics/10-data-types/: Cargo.toml  README.md
examples/basics/11-collection-types/: Cargo.toml  README.md
examples/basics/11-event-filtering/: Cargo.toml  README.md
examples/basics/12-error-handling/: Cargo.toml  README.md
examples/basics/basic-event-emission/: Cargo.toml  README.md
examples/basics/events/: Cargo.toml  README.md
examples/basics/instance-storage/: README.md
examples/basics/persistent-storage/: README.md
examples/basics/temporary_storage/: README.md
examples/defi/: README.md
examples/governance/: README.md
examples/nfts/: README.md
examples/storage/: README.md
examples/tokens/: README.md
guides/: README.md  deployment.md  ethereum-to-soroban.md  testing.md
scripts/: README.md  benchmark.sh  build.sh  deploy.sh  lint.sh  test.sh
tests/integration/: Cargo.toml  README.md  build.rs
tests/integration/test_snapshots/: test_authenticated_storage_workflow.1.json  test_coordinated_state_management.1.json  test_cross_contract_event_tracking.1.json  test_greeting_system_workflow.1.json  test_multi_party_workflow.1.json  test_storage_types_comparison.1.json
tests/integration/tests/: integration_tests.rs
webapp/: package.json
webapp/src/app/: globals.css  layout.tsx
(+286 files in other folders)
