[package]
name        = "error-handling"
version     = "0.1.0"
edition     = "2021"
description = "Soroban Cookbook – panic vs. typed errors example"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils", "alloc"] }

[profile.release]
opt-level     = "z"
overflow-checks = true
debug         = false
strip         = "symbols"
debug-assertions = false
panic         = "abort"
codegen-units = 1
lto           = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true