[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
hello-world = { path = "../../examples/basics/01-hello-world" }
storage-patterns = { path = "../../examples/basics/02-storage-patterns" }
authentication = { path = "../../examples/basics/03-authentication" }
events-counter = { path = "../../examples/basics/events", package = "events_example" }
custom-errors = { path = "../../examples/basics/03-custom-errors" }
validation-patterns = { path = "../../examples/basics/06-validation-patterns" }
custom-structs = { path = "../../examples/basics/08-custom-structs" }
ajo-factory = { path = "../../examples/intermediate/ajo-factory" }
multi-sig-patterns = { path = "../../examples/intermediate/multi-sig-patterns" }
